fixed errors to initial commits

--- a/index.html
+++ b/index.html
@@ -169,5 +169,5 @@
         </div>
         <div class="copyright"> <p>Copyright © 2021 Paloma Siqueira</p> </div>
     </footer>
-    <script src="./javascript.js"></script>
+    <script src="javascript.js"></script>
 </body>
