ajusts on home page

--- a/old-index.html
+++ b/old-index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="glider.css">
-    <link rel="stylesheet" href="newStyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portifólio Paloma Siqueira</title>
 </head>
 <body>
@@ -35,60 +34,39 @@
                 <i id="left" class="fa-solid fa-angle-left">&#10094;</i> 
                 <div class="slider" id="slider">
                     <div class="card" id="slide1">
-                        <div class="slide-img">
-                            <a href="#"><img src="./assets/highlightProjectCard01.jpg" alt="página Casa JC6" draggable="false"></a>
-                        </div>
-                        <div class="slide-content">
-                            <h2>CASA <br> JC66</h2>
-                            <h4>EDIFICAÇÃO NOVA</h4>
-                            <h3>FOTOS: ANA MELLO</h3>
-                            <h5>1/5</h5>
-                        </div>
+                        <a href="#"><img src="./assets/highlightProjectCard01.jpg" alt="página Casa JC6" draggable="false"></a>
+                        <h2>CASA <br> JC66</h2>
+                        <h4>EDIFICAÇÃO NOVA</h4>
+                        <h3>FOTOS: ANA MELLO</h3>
+                        <h5>1/5</h5>
                     </div>
                     <div class="card" id="slide2">
-                        <div class="slide-img">
-                            <a href="#"><img src="./assets/highlightProjectCard02.jpg" alt="página Casa Milano" draggable="false"></a>                       
-
-                        </div>
-                        <div class="slide-content">
-                            <h2>CASA <br> MILANO</h2>
-                            <h4>EDIFICAÇÃO NOVA</h4>
-                            <h3>FOTOS: ANA MELLO</h3>
-                            <h5>2/5</h5>
-                        </div>
+                        <a href="#"><img src="./assets/highlightProjectCard02.jpg" alt="página Casa Milano" draggable="false"></a>
+                        <h2>CASA <br> JC66</h2>
+                        <h4>EDIFICAÇÃO NOVA</h4>
+                        <h3>FOTOS: ANA MELLO</h3>
+                        <h5>2/5</h5>
                     </div>
                     <div  class="card" id="slide3">
-                        <div class="slide-img">
-                            <a href="#"><img src="./assets/highlightProjectCard03.jpg" alt="página Odoyá Lounge Bar" draggable="false"></a>
-                        </div>
-                        <div class="slide-content">
-                            <h2>ODAYÁ <br> LOUNGE <br> BAR</h2>
-                            <h4>EDIFICAÇÃO NOVA</h4>
-                            <h3>FOTOS: ANA MELLO</h3>
-                            <h5>3/5</h5>
-                        </div>
+                        <a href="#"><img src="./assets/highlightProjectCard03.jpg" alt="página Odoyá Lounge Bar" draggable="false"></a>
+                        <h2>CASA <br> JC66</h2>
+                        <h4>EDIFICAÇÃO NOVA</h4>
+                        <h3>FOTOS: ANA MELLO</h3>
+                        <h5>3/5</h5>
                     </div>
                     <div class="card" id="slide4" >
-                        <div class="slide-img">
-                            <a href="#"><img src="./assets/highlightProjectCard04.jpg" alt="Página Vila Oxalá 1" draggable="false"></a>    
-                        </div>
-                        <div class="slide-content">
-                            <h2>VILA <br> OXALÁ I</h2>
-                            <h4>EDIFICAÇÃO NOVA</h4>
-                            <h3>FOTOS: ANA MELLO</h3>
-                            <h5>4/5</h5>
-                        </div>                    
+                        <a href="#"><img src="./assets/highlightProjectCard04.jpg" alt="Página Vila Oxalá 1" draggable="false"></a>
+                        <h2>CASA <br> JC66</h2>
+                        <h4>EDIFICAÇÃO NOVA</h4>
+                        <h3>FOTOS: ANA MELLO</h3>
+                        <h5>4/5</h5>
                     </div>
                     <div class="card" id="slide5">
-                        <div class="slide-img">
-                            <a href="#"><img src="./assets/highlightProjectCard05.jpg" alt="Página Vila Oxalá 2" draggable="false"></a>  
-                        </div>
-                        <div class="slide-content">
-                            <h2>VILA <br> OXALÁ II</h2>
-                            <h4>EDIFICAÇÃO NOVA</h4>
-                            <h3>FOTOS: ANA MELLO</h3>
-                            <h5>5/5</h5>
-                        </div>      
+                        <a  href="#"><img src="./assets/highlightProjectCard05.jpg" alt="Página Vila Oxalá 2" draggable="false"></a>
+                        <h2>CASA <br> JC66</h2>
+                        <h4>EDIFICAÇÃO NOVA</h4>
+                        <h3>FOTOS: ANA MELLO</h3>
+                        <h5>5/5</h5>
                     </div>
                 </div>
                 <div class="slider-nav">
@@ -191,6 +169,5 @@
         </div>
         <div class="copyright"> <p>Copyright © 2021 Paloma Siqueira</p> </div>
     </footer>
-
-    <script src="./java.js"></script>
+    <script src="javascript.js"></script>
 </body>
