--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Portifólio Paloma Siqueira</title>
 </head>
 <body>
@@ -32,42 +31,27 @@
         <div class="container" id="projetos">
             <div class="slider-wrapper">
                 <i id="left" class="fa-solid fa-angle-left">&#10094;</i> 
-                <div class="slider" id="slider">
-                    <div class="card" id="slide1">
-                        <a href="#"><img src="./assets/highlightProjectCard01.jpg" alt="página Casa JC6" draggable="false"></a>
-                        <h2>CASA <br> JC66</h2>
-                        <h4>EDIFICAÇÃO NOVA</h4>
-                        <h3>FOTOS: ANA MELLO</h3>
-                        <h5>1/5</h5>
-                    </div>
-                    <div class="card" id="slide2">
-                        <a href="#"><img src="./assets/highlightProjectCard02.jpg" alt="página Casa Milano" draggable="false"></a>
-                        <h2>CASA <br> JC66</h2>
-                        <h4>EDIFICAÇÃO NOVA</h4>
-                        <h3>FOTOS: ANA MELLO</h3>
-                        <h5>2/5</h5>
-                    </div>
-                    <div  class="card" id="slide3">
-                        <a href="#"><img src="./assets/highlightProjectCard03.jpg" alt="página Odoyá Lounge Bar" draggable="false"></a>
-                        <h2>CASA <br> JC66</h2>
-                        <h4>EDIFICAÇÃO NOVA</h4>
-                        <h3>FOTOS: ANA MELLO</h3>
-                        <h5>3/5</h5>
-                    </div>
-                    <div class="card" id="slide4" >
-                        <a href="#"><img src="./assets/highlightProjectCard04.jpg" alt="Página Vila Oxalá 1" draggable="false"></a>
-                        <h2>CASA <br> JC66</h2>
-                        <h4>EDIFICAÇÃO NOVA</h4>
-                        <h3>FOTOS: ANA MELLO</h3>
-                        <h5>4/5</h5>
-                    </div>
-                    <div class="card" id="slide5">
-                        <a  href="#"><img src="./assets/highlightProjectCard05.jpg" alt="Página Vila Oxalá 2" draggable="false"></a>
-                        <h2>CASA <br> JC66</h2>
-                        <h4>EDIFICAÇÃO NOVA</h4>
-                        <h3>FOTOS: ANA MELLO</h3>
-                        <h5>5/5</h5>
-                    </div>
+                <div class="slider" class="slider">
+                    <a class="card" id="slide1" target="_blank" href="casajc66.html">
+                        <img class="img1" src="./assets/highlightProjectCard01.png" alt="página Casa JC6" draggable="false">
+                        <img class="img2" src="./assets/mobile/01-banner-carrossel-casajc66mobile.png" alt="página Casa JC6" draggable="false">
+                    </a>
+                    <a class="card" id="slide2" target="_blank" href="casamilano.html">
+                        <img class="img1" src="./assets/highlightProjectCard02.png" alt="página Casa Milano" draggable="false">
+                        <img class="img2" src="./assets/mobile/02-banner-carrossel-casamilanomobile.png" alt="página Casa Milano" draggable="false">
+                    </a>
+                    <a class="card" id="slide3" target="_blank" href="odoyalouge.html">
+                        <img class="img1" src="./assets/highlightProjectCard03.png" alt="página Odoyá Lounge Bar" draggable="false">
+                        <img class="img2" src="./assets/mobile/03-banner-carrossel-odoyaloungebarmobile.png" alt="página Odoyá Lounge Bar" draggable="false">
+                    </a>
+                    <a class="card" id="slide4" target="_blank" href="vilaoxalai.html">
+                        <img class="img1" src="./assets/highlightProjectCard04.png" alt="Página Vila Oxalá 1" draggable="false">
+                        <img class="img2" src="./assets/mobile/04-banner-carrossel-vilaoxala1mobile.png" alt="Página Vila Oxalá 1" draggable="false">
+                    </a>
+                    <a class="card" id="slide5" target="_blank" href="vilaoxalaii.html">
+                        <img class="img1" src="./assets/highlightProjectCard05.png" alt="Página Vila Oxalá 2" draggable="false">
+                        <img class="img2" src="./assets/mobile/05-banner-carrossel-vilaoxala2mobile.png" alt="Página Vila Oxalá 2" draggable="false">
+                    </a>
                 </div>
                 <div class="slider-nav">
                     <a id="radio1" href="#slide1"></a>
@@ -169,5 +153,6 @@
         </div>
         <div class="copyright"> <p>Copyright © 2021 Paloma Siqueira</p> </div>
     </footer>
-    <script src="javascript.js"></script>
+
+    <script src="java.js"></script>
 </body>
