logo img width and slide2 proj fixed

--- a/vilaoxalai.html
+++ b/vilaoxalai.html
@@ -79,101 +79,101 @@
             <p>OUTROS <br> PROJETOS</p>
         </div>
         <div class="slider2-wrapper">
-            <i id="prev2" id="arrowSlider2" >&#10094;</i>
+            <i id="prev2" id="arrowSlider2" onclick="plusSlides(-1)">&#10094;</i>
             <ul class="carousel">
                 <li class="card"><div class="textslide" id="textslide1">
                     <h1>CASA JC66</h1>
                     <h2>2012</h2>
-                    <a href="#"><img src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
+                    <a target="_blank" href="casajc66.html"><img src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
                     <h3>FOTOS: ANA MELLO</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide2">
                     <h1>CASA OXALÁ I</h1>
                     <h2>2016</h2>
-                    <a href="#"><img src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
+                    <a href="#home"><img src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide3">
                     <h1>CASA OXALÁ II</h1>
                     <h2>2017</h2>
-                    <a href="#"><img src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
+                    <a target="_blank" href="vilaoxalaii.html"><img src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide4">
                     <h1>CASA MILANO</h1>
                     <h2>2017</h2>
-                    <a href="#"><img src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
+                    <a target="_blank" href="casamilano.html"><img src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide5">
                     <h1>ODOYÁ LOUNGE</h1>
                     <h2>2017</h2>
-                    <a href="#"><img src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                    <a target="_blank" href="odoyalouge.html"><img src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide6">
                     <h1>CASA BP</h1>
                     <h2>2004</h2>
-                    <a href="#"><img src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
+                    <a target="_blank" href="casabp.html"><img src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
                     <h3>FOTOS: CAROLINA RIBEIRO</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide7">
                     <h1>CASA LB</h1>
                     <h2>2006</h2>
-                    <a href="#"><img src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
+                    <a target="_blank" href="casalb.html"><img src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide8">
                     <h1>ATELIÊ LV</h1>
                     <h2>2006</h2>
-                    <a href="#"><img src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
+                    <a target="_blank" href="atelielv.html"><img src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide9">
                     <h1>BOM, CAFÉ</h1>
                     <h2>2006</h2>
-                    <a href="#"><img src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
+                    <a target="_blank" href="bomcafe.html"><img src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide10">
                     <h1>THE PILATES STUDIO BRAZIL</h1>
                     <h2>2006</h2>
-                    <a href="#"><img src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
+                    <a target="_blank" href="pilatesbrazil.html"><img src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide11">
                     <h1>ANNEXE</h1>
                     <h2>2007</h2>
-                    <a href="#"><img src="./assets/projeto-110.png" alt="link projeto annexe"></a>
+                    <a target="_blank" href="annexe.html"><img src="./assets/projeto-110.png" alt="link projeto annexe"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide12">
                     <h1>ASACCIONES</h1>
                     <h2>2011</h2>
-                    <a href="#"><img src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
+                    <a target="_blank" href="asacciones.html"><img src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide13">
                     <h1>RENOVA SP</h1>
                     <h2>2007</h2>
-                    <a href="#"><img src="./assets/projeto-130.png" alt="link projeto renova sp"></a>
+                    <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.jpg" alt="link projeto renova sp"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
             </ul> 
-            <i id="next2" id="arrowSlider2" >&#10095;</i>        
+            <i id="next2" id="arrowSlider2" onclick="plusSlides(1)">&#10095;</i>        
         </div>       
     </main>
 <footer>
