--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html lang=”pt-br”>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,11 +55,11 @@
                     </a>
                 </div>
                 <div class="slider-nav">
-                    <a id="radio1" href="#slide1"></a>
-                    <a id="radio2" href="#slide2"></a>
-                    <a id="radio3" href="#slide3"></a>
-                    <a id="radio4" href="#slide4"></a>
-                    <a id="radio5" href="#slide5"></a>
+                    <a class="dot" id="radio1" onclick="currentSlide(1)"></a>
+                    <a class="dot" id="radio2" onclick="currentSlide(2)"></a>
+                    <a class="dot" id="radio3" onclick="currentSlide(3)"></a>
+                    <a class="dot" id="radio4" onclick="currentSlide(4)"></a>
+                    <a class="dot" id="radio5" onclick="currentSlide(5)"></a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right">&#10095;</i> 
             </div>
@@ -154,5 +155,6 @@
         <div class="copyright"> <p>Copyright © 2021 Paloma Siqueira</p> </div>
     </footer>
 
-    <script src="java.js"></script>
+    <script src="javascript.js"></script>
 </body>
+</html>
