--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     </a>
                 </div>
                 <div class="slider-nav">
-                    <a class="dot" id="radio1" onclick="currentSlide(1)"></a>
-                    <a class="dot" id="radio2" onclick="currentSlide(2)"></a>
-                    <a class="dot" id="radio3" onclick="currentSlide(3)"></a>
-                    <a class="dot" id="radio4" onclick="currentSlide(4)"></a>
-                    <a class="dot" id="radio5" onclick="currentSlide(5)"></a>
+                    <a class="dot" id="radio1" href="#slide1"></a>
+                    <a class="dot" id="radio2" href="#slide2"></a>
+                    <a class="dot" id="radio3" href="#slide3"></a>
+                    <a class="dot" id="radio4" href="#slide4"></a>
+                    <a class="dot" id="radio5" href="#slide5"></a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right">&#10095;</i> 
             </div>
