img compressed (jpg to webp) css compressed

--- a/casamilano.html
+++ b/casamilano.html
@@ -164,7 +164,7 @@
                 <li class="card"><div class="textslide" id="textslide13">
                     <h1>RENOVA SP</h1>
                     <h2>2007</h2>
-                    <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.jpg" alt="link projeto renova sp"></a>
+                    <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.png" alt="link projeto renova sp"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
