--- a/projetos.html
+++ b/projetos.html
@@ -38,14 +38,14 @@
                 <div class="card1">
                     <h1>CASA JC66</h1>
                     <h2>2012</h2>
-                    <a target="_blank" href="casajc66.html"><img src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66"></a>
+                    <a target="_blank" href="casajc66.html"><img src="assets/projeto-11.webp" alt="link projeto casa JC66"></a>
                     <h3>FOTOS: ANA MELLO</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
                 <div class="card2">
                     <h1>CASA MILANO</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="casamilano.html"><img src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano"></a>
+                    <a target="_blank" href="casamilano.html"><img src="assets/projeto-22.webp" alt="link projeto Casa Milano"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -54,7 +54,7 @@
                 <div class="card3">
                     <h1>VILA OXALÁ I</h1>
                     <h2>2016</h2>
-                    <a target="_blank" href="vilaoxalai.html"><img src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1"></a>
+                    <a target="_blank" href="vilaoxalai.html"><img src="assets/projeto-33.webp" alt="link projeto Casa Oxalá 1"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -63,14 +63,14 @@
                 <div class="card4">
                     <h1>VILA OXALÁ II</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="vilaoxalaii.html"><img src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2"></a>                    
+                    <a target="_blank" href="vilaoxalaii.html"><img src="assets/projeto-44.webp" alt="link projeto casa Oxalá 2"></a>                    
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
                 <div class="card5">
                     <h1>ODOYÁ LOUNGE</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="odoyalouge.html"><img src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge"></a>
+                    <a target="_blank" href="odoyalouge.html"><img src="assets/projeto-55.webp" alt="link projeto odoya lounge"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="card6">
                     <h1>CASA BP</h1>
                     <h2>2004</h2>
-                    <a target="_blank" href="casabp.html"><img src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp"></a>
+                    <a target="_blank" href="casabp.html"><img src="assets/projeto-66.webp" alt="link projeto casa bp"></a>
                     <h3>FOTOS: CAROLINA RIBEIRO</h3>
                     <h4>REFORMA</h4>
                 </div>
@@ -88,14 +88,14 @@
                 <div class="card7">
                     <h1>CASA LB</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="casalb.html"><img src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb"></a>
+                    <a target="_blank" href="casalb.html"><img src="assets/projeto-77.webp" alt="link projeto casa lb"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
                 <div class="card8">
                     <h1>ATELIÊ LV</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="atelielv.html"><img src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv"></a>
+                    <a target="_blank" href="atelielv.html"><img src="assets/projeto-88.webp" alt="link projeto casa lv"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="card9">
                     <h1>BOM, CAFÉ</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="bomcafe.html"><img src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café"></a>
+                    <a target="_blank" href="bomcafe.html"><img src="assets/projeto-99.webp" alt="link projeto bom, café"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
@@ -113,14 +113,14 @@
                 <div class="card10">
                     <h1>THE PILATES STUDIO BRAZIL</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="pilatesbrazil.html"><img src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil"></a>
+                    <a target="_blank" href="pilatesbrazil.html"><img src="assets/projeto-100.webp" alt="link projeto the pilates studio brazil"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
                 <div class="card11">
                     <h1>ANNEXE</h1>
                     <h2>2007</h2>
-                    <a target="_blank" href="annexe.html"><img src="./assets/projeto-110.png" alt="link projeto annexe"></a>
+                    <a target="_blank" href="annexe.html"><img src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
@@ -129,14 +129,14 @@
                 <div class="card12">
                         <h1>ASACCIONES</h1>
                         <h2>2011</h2>
-                        <a target="_blank" href="asacciones.html"><img src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
+                        <a target="_blank" href="asacciones.html"><img src="assets/projeto-120.png" alt="link projeto asacciones"></a>
                         <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                         <h4>CONCURSO</h4>
                         </div>
                     <div class="card13">
                         <h1>RENOVA SP</h1>
                         <h2>2007</h2>
-                        <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.png" alt="link projeto renova sp"></a>
+                        <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
                         <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                         <h4>CONCURSO</h4>
                     </div>
