--- a/renovasp.html
+++ b/renovasp.html
@@ -1,3 +1,4 @@
+<html lang=”pt-br”>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -184,3 +185,4 @@
 </footer>
 <script src="script-proj.js"></script>
 </body>
+</html>
