--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portifólio Paloma Siqueira</title>
+    <title>Paloma Siqueira</title>
 </head>
 <body>
     <header id="navbar"> 
@@ -34,24 +34,24 @@
                 <i id="left" class="fa-solid fa-angle-left">&#10094;</i> 
                 <div class="slider" class="slider">
                     <a class="card" id="slide1" target="_blank" href="casajc66.html">
-                        <img class="img1" src="./assets/highlightProjectCard01.png" alt="página Casa JC6" draggable="false">
-                        <img class="img2" src="./assets/mobile/01-banner-carrossel-casajc66mobile.png" alt="página Casa JC6" draggable="false">
+                        <img class="img1" src="./assets/highlightProjectCard01.webp" alt="página Casa JC6" draggable="false">
+                        <img class="img2" src="./assets/mobile/01-banner-carrossel-casajc66mobile.webp" alt="página Casa JC6" draggable="false">
                     </a>
                     <a class="card" id="slide2" target="_blank" href="casamilano.html">
-                        <img class="img1" src="./assets/highlightProjectCard02.png" alt="página Casa Milano" draggable="false">
-                        <img class="img2" src="./assets/mobile/02-banner-carrossel-casamilanomobile.png" alt="página Casa Milano" draggable="false">
+                        <img class="img1" src="./assets/highlightProjectCard02.webp" alt="página Casa Milano" draggable="false">
+                        <img class="img2" src="./assets/mobile/02-banner-carrossel-casamilanomobile.webp" alt="página Casa Milano" draggable="false">
                     </a>
                     <a class="card" id="slide3" target="_blank" href="odoyalouge.html">
-                        <img class="img1" src="./assets/highlightProjectCard03.png" alt="página Odoyá Lounge Bar" draggable="false">
-                        <img class="img2" src="./assets/mobile/03-banner-carrossel-odoyaloungebarmobile.png" alt="página Odoyá Lounge Bar" draggable="false">
+                        <img class="img1" src="./assets/highlightProjectCard03.webp" alt="página Odoyá Lounge Bar" draggable="false">
+                        <img class="img2" src="./assets/mobile/03-banner-carrossel-odoyaloungebarmobile.webp" alt="página Odoyá Lounge Bar" draggable="false">
                     </a>
                     <a class="card" id="slide4" target="_blank" href="vilaoxalai.html">
-                        <img class="img1" src="./assets/highlightProjectCard04.png" alt="Página Vila Oxalá 1" draggable="false">
-                        <img class="img2" src="./assets/mobile/04-banner-carrossel-vilaoxala1mobile.png" alt="Página Vila Oxalá 1" draggable="false">
+                        <img class="img1" src="./assets/highlightProjectCard04.webp" alt="Página Vila Oxalá 1" draggable="false">
+                        <img class="img2" src="./assets/mobile/04-banner-carrossel-vilaoxala1mobile.webp" alt="Página Vila Oxalá 1" draggable="false">
                     </a>
                     <a class="card" id="slide5" target="_blank" href="vilaoxalaii.html">
-                        <img class="img1" src="./assets/highlightProjectCard05.png" alt="Página Vila Oxalá 2" draggable="false">
-                        <img class="img2" src="./assets/mobile/05-banner-carrossel-vilaoxala2mobile.png" alt="Página Vila Oxalá 2" draggable="false">
+                        <img class="img1" src="./assets/highlightProjectCard05.webp" alt="Página Vila Oxalá 2" draggable="false">
+                        <img class="img2" src="./assets/mobile/05-banner-carrossel-vilaoxala2mobile.webp" alt="Página Vila Oxalá 2" draggable="false">
                     </a>
                 </div>
                 <div class="slider-nav">
@@ -92,7 +92,7 @@
             </button>
         </div>
         <div class="imagem-perfil">
-            <img src="https://uploads-ssl.webflow.com/62f4c8bbc5de641c4f23e52a/6304a2bd1a432162f5964d62_220811A-002-p-500.webp" alt="">
+            <img src="assets/profile-palomasiqueira.jpg" alt="">
         </div>
         <div class="slider2">
             <div class="slider2-wrapper">
