--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Paloma Siqueira</title>
+    <meta name="author" content="Flavia Sigoli"/>
+    <meta http-equiv="content-language" content="pt-br, en-US" />
+    <meta name="copyright" content="Copyright © 2021 Paloma Siqueira" />
+    <meta http-equiv="content-type" content="html; charset=UTF-8" />
+    <meta name="description" content="portifólio arquitetura por Paloma Siqueira" />
+    <meta name="keywords" content="portifolio, artigo, arquiteta, arquitetura, projetos, Paloma, Siqueira, Paloma Siqueira">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <header id="navbar"> 
         <div id="home">
-        <div class="menu-logo">
-                <a href="index.html"><img src="./assets/Frame48.jpg" alt=""></a>
+            <div class="menu-logo">
+                    <a href="index.html"><img src="./assets/Frame48.jpg" alt=""></a>
+            </div>
+            <nav class="navbar">
+                <a href="#" class="btn-toggle">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+                <div class="menu-links">
+                    <a href="index.html"> Início </a>
+                    <a href="./projetos.html"> Projetos </a>
+                    <a href="index.html#sobre"> Sobre </a>
+                    </div>
+            </nav>
         </div>
-        <nav class="navbar">
-            <a href="#" class="btn-toggle">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <div class="menu-links">
-                <a href="index.html"> Início </a>
-                <a href="./projetos.html"> Projetos </a>
-                <a href="index.html#sobre"> Sobre </a>
-                </div>
-        </nav>
-    </div>
     </header>
         <div class="container" id="projetos">
             <div class="slider-wrapper">
