--- a/ceagesp.html
+++ b/ceagesp.html
@@ -1,3 +1,4 @@
+<html lang=”pt-br”>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -5,9 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="casajc66.css">
-    <title>Casa JC66 - Paloma Siqueira</title>
+    <link rel="stylesheet" href="ceagesp.css">
+    <title>CEAGESP - Paloma Siqueira</title>
     <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
     <meta http-equiv="content-language" content="pt-br, en-US" />
@@ -37,36 +37,50 @@
     </header>
     <main>
         <div class="sobre">
-            <div class="title"><p>CASA <br> JC66</p></div>
+            <div class="title">
+                <p> CEAGESP</p>
+                <span>SIMULAÇÃO <br>URBANÍSTICA</span>
+            </div>
             <div class="about">
-                <h2>EDIFICAÇÃO NOVA</h2>
-                <h3>FOTOS POR ANA MELLO</h3>
-                <p>Projeto: Paloma Siqueira
-                <br>Colaboradores: Vivian Tonglet e Claudio Helzel Local: São Paulo, SP, Brasil
-                <br>Conclusão da Obra: 2012
-                <br>Área do terreno: 611m2
-                <br> Área construída: 435m2
-                <br>Execução: Tiburcio Dias Engenharia
-                <br>Paisagismo: Alice Rocha e Camila Sesma
-                <br>Publicações:
+                <h2>URBANISMO</h2>
+                <p><span><br>Projeto: 
+                </span>Paloma Siqueira + Raul Alonso + David Gastón Robles 
+                <span><br>Cliente:
+                </span>Parkinson Desenvolvimento Imobiliário 
+                <span><br>Local: 
+                </span>São Paulo, SP, Brasil
+                <span><br>Área:
+                </span>61ha
+                <span><br>Ano:
+                </span>2013
                 </p>
-                <a href="#" alt="Link Casa Abril">Casa Abril</a>
-                <a href="#" alt="Link Revista Projeto Ed. Ago 2016">Revista Projeto Ed. Ago 2016</a>
             </div>
         </div>
         <div class="frame1">
-            <img src="./assets/casajc66/frame1.webp" alt="imagem capa Casa JC66">
+            <img src="./assets/ceagesp/frame1.jpg" alt="imagem capa projeto ceagesp">
+        </div>
+        <div class="about-quote">
+            <p>Área localizada em um importante eixo de desenvolvimento urbano ao longo do Rio Pinheiros, na capital Paulista, que atualmente configura uma barreira urbana e polo gerador de tráfego.
+                <br> <br>
+                A proposta consiste no planejamento do desenvolvimento urbano de qualidade visando a oferta de um novo território integrado à cidade existente e baseado em conceitos contemporâneos de urbanismo sustentável.</p>
+        </div>
+        <div class="frame3">
+            <img src="./assets/ceagesp/frame2.jpg" alt="imagem projeto ceagesp">
+            <img src="./assets/ceagesp/frame3.jpg" alt="imagem projeto ceagesp">
+        </div>
+        <div class="about-quote2">
+            <p>O estudo realizado teve como base a análise geral do território com modelagem econômica e jurídica realizadas pelo cliente.</p>
         </div>
         <div class="container-slider">
             <div class="slider-wrapper">
                 <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-1.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-2.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-4.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casajc66/img-slide1-3.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide1.png" alt="imagem projeto ceagesp"></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide2.png" alt="imagem projeto ceagesp"></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide3.png" alt="imagem projeto ceagesp"></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/ceagesp/slide4.png" alt="imagem projeto ceagesp"></div>
                 </div>
-                <div class="slider2-nav">
+                <div class="slider1-nav">
                     <a class="dot2" onclick="currentSlide(1)" ></a>
                     <a class="dot2" onclick="currentSlide(2)" ></a>
                     <a class="dot2" onclick="currentSlide(3)" ></a>
@@ -76,130 +90,116 @@
             </div>
 
         </div>
-        <div class="frame2">
-            <img src="./assets/casajc66/frame2.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame3.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame4.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame5.webp" alt="imagem Casa JC66">
-        </div>
         <div class="frame3">
-            <img src="./assets/casajc66/frame6.webp" alt="imagem Casa JC66">
+            <img src="./assets/ceagesp/frame4.jpg" alt="imagem projeto ceagesp">
         </div>
-        <div class="frame4">
-            <img src="./assets/casajc66/frame7.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame8.webp" alt="imagem Casa JC66">
-        </div>
-        <div class="frame5">
-            <img src="./assets/casajc66/frame9.webp" alt="imagem Casa JC66">
+        <div class="about-quote2">
+            <p>Em nossa proposta, buscamos a indução da transformação urbana da área de forma articulada com seu entorno, dentro de um conceito de cidade compacta, complexa e sustentável. Para alcançar este objetivo equilibramos as densidades no território, diversificamos o uso do solo e hierarquizamos o sistema viário, de forma que se privilegiasse os modos não motorizados e o transporte coletivo.
+                Propusemos também a ampliação da permeabilidade do solo e incremento das áreas verdes ao longo da hidrografia local. Por fim, interconectamos a área projetada e seu entorno ativando a requalificação ambiental.</p>
         </div>
         <div class="frame6">
-            <img src="./assets/casajc66/frame10.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame11.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame12.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame13.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame14.webp" alt="imagem Casa JC66">
-            <img src="./assets/casajc66/frame15.webp" alt="imagem Casa JC66">
+            <img src="./assets/ceagesp/frame5.jpg" alt="imagem projeto ceagesp">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
         </div>
         <div class="slider2-wrapper">
-            <i class="prev2" id="arrowSlider2" onclick="plusSlides(-1)">&#10094;</i>
+            <i id="prev2" id="arrowSlider2" onclick="plusSlides(-1)">&#10094;</i>
             <ul class="carousel">
                 <li class="card"><div class="textslide" id="textslide1">
                     <h1>CASA JC66</h1>
                     <h2>2012</h2>
-                    <a href="#home"><img src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
+                    <a target="_blank" href="casajc66.html"><img draggable="false" src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
                     <h3>FOTOS: ANA MELLO</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide2">
                     <h1>CASA OXALÁ I</h1>
                     <h2>2016</h2>
-                    <a target="_blank" href="vilaoxalai.html"><img src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
+                    <a target="_blank" href="vilaoxalai.html"><img draggable="false" src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide3">
                     <h1>CASA OXALÁ II</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="vilaoxalaii.html"><img src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
+                    <a target="_blank" href="vilaoxalaii.html"><img draggable="false" src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide4">
                     <h1>CASA MILANO</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="casamilano.html"><img src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
+                    <a target="_blank" href="casamilano.html"><img draggable="false" src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide5">
                     <h1>ODOYÁ LOUNGE</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="odoyalouge.html"><img src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                    <a target="_blank" href="odoyalouge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide6">
                     <h1>CASA BP</h1>
                     <h2>2004</h2>
-                    <a target="_blank" href="casabp.html"><img src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
+                    <a target="_blank" href="casabp.html"><img draggable="false" src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
                     <h3>FOTOS: CAROLINA RIBEIRO</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide7">
                     <h1>CASA LB</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="casalb.html"><img src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
+                    <a target="_blank" href="casalb.html"><img draggable="false" src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide8">
                     <h1>ATELIÊ LV</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="atelielv.html"><img src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
+                    <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide9">
                     <h1>BOM, CAFÉ</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="bomcafe.html"><img src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
+                    <a target="_blank" href="bomcafe.html"><img draggable="false" src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide10">
                     <h1>THE PILATES STUDIO BRAZIL</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="pilatesbrazil.html"><img src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
+                    <a target="_blank" href="pilatesbrazil.html"><img draggable="false" src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide11">
                     <h1>ANNEXE</h1>
                     <h2>2007</h2>
-                    <a target="_blank" href="annexe.html"><img src="./assets/projeto-110.png" alt="link projeto annexe"></a>
+                    <a href="#home"><img draggable="false" src="./assets/projeto-110.png" alt="link projeto annexe"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide12">
                     <h1>ASACCIONES</h1>
                     <h2>2011</h2>
-                    <a target="_blank" href="asacciones.html"><img src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
+                    <a target="_blank" href="asacciones.html"><img draggable="false" src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide13">
                     <h1>RENOVA SP</h1>
                     <h2>2007</h2>
-                    <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
+                    <a target="_blank" href="renovasp.html"><img draggable="false" src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
-            </ul>              
-            <i class="next2" id="arrowSlider2" onclick="plusSlides(1)">&#10095;</i>   
-        </div>       
+            </ul>  
+            <i id="next2" id="arrowSlider2" onclick="plusSlides(1)">&#10095;</i>        
+        </div>        
     </main>
 <footer>
     <div class="grid-footer">
@@ -223,3 +223,4 @@
 </footer>
 <script src="script-proj.js"></script>
 </body>
+</html>
