--- a/annexe.html
+++ b/annexe.html
@@ -12,7 +12,7 @@
 <body>
     <header id="home">
         <div class="menu-logo">
-                <a href="index.html"><img src="./assets/Frame48.jpg" alt=""></a>
+                <a href="index.html"><img draggable="false" src="./assets/Frame48.jpg" alt=""></a>
         </div>
         <nav class="navbar">
             <a href="#" class="btn-toggle">
@@ -41,19 +41,19 @@
             </div>
         </div>
         <div class="frame6">
-            <img src="./assets/annexe/frame1.jpg" alt="imagem capa Projeto Annexe">
-            <img src="./assets/annexe/frame2.jpg" alt="imagem Projeto Annexe">
+            <img draggable="false" src="./assets/annexe/frame1.jpg" alt="imagem capa Projeto Annexe">
+            <img draggable="false" src="./assets/annexe/frame2.jpg" alt="imagem Projeto Annexe">
         </div>
         <div class="container-slider">
             <div class="slider-wrapper">
                 <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/annexe/img-slide1-1.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/annexe/img-slide1-2.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/annexe/img-slide1-3.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/annexe/img-slide1-4.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/annexe/img-slide1-5.jpg" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/annexe/img-slide1-6.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/annexe/img-slide1-1.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/annexe/img-slide1-2.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/annexe/img-slide1-3.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/annexe/img-slide1-4.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/annexe/img-slide1-5.jpg" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img draggable="false" src="./assets/annexe/img-slide1-6.jpg" alt=""></div>
                 </div>
                 <div class="slider1-nav">
                     <a class="dot2" onclick="currentSlide(1)" ></a>
@@ -68,7 +68,7 @@
 
         </div>
         <div class="frame6">
-            <img src="./assets/annexe/frame3.jpg" alt="imagem Projeto Annexe">
+            <img draggable="false" src="./assets/annexe/frame3.jpg" alt="imagem Projeto Annexe">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
@@ -79,91 +79,91 @@
                 <li class="card"><div class="textslide" id="textslide1">
                     <h1>CASA JC66</h1>
                     <h2>2012</h2>
-                    <a target="_blank" href="casajc66.html"><img src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
+                    <a target="_blank" href="casajc66.html"><img draggable="false" src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
                     <h3>FOTOS: ANA MELLO</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide2">
                     <h1>CASA OXALÁ I</h1>
                     <h2>2016</h2>
-                    <a target="_blank" href="vilaoxalai.html"><img src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
+                    <a target="_blank" href="vilaoxalai.html"><img draggable="false" src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide3">
                     <h1>CASA OXALÁ II</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="vilaoxalaii.html"><img src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
+                    <a target="_blank" href="vilaoxalaii.html"><img draggable="false" src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide4">
                     <h1>CASA MILANO</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="casamilano.html"><img src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
+                    <a target="_blank" href="casamilano.html"><img draggable="false" src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide5">
                     <h1>ODOYÁ LOUNGE</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="odoyalouge.html"><img src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                    <a target="_blank" href="odoyalouge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide6">
                     <h1>CASA BP</h1>
                     <h2>2004</h2>
-                    <a target="_blank" href="casabp.html"><img src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
+                    <a target="_blank" href="casabp.html"><img draggable="false" src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
                     <h3>FOTOS: CAROLINA RIBEIRO</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide7">
                     <h1>CASA LB</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="casalb.html"><img src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
+                    <a target="_blank" href="casalb.html"><img draggable="false" src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide8">
                     <h1>ATELIÊ LV</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="atelielv.html"><img src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
+                    <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide9">
                     <h1>BOM, CAFÉ</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="bomcafe.html"><img src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
+                    <a target="_blank" href="bomcafe.html"><img draggable="false" src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide10">
                     <h1>THE PILATES STUDIO BRAZIL</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="pilatesbrazil.html"><img src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
+                    <a target="_blank" href="pilatesbrazil.html"><img draggable="false" src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide11">
                     <h1>ANNEXE</h1>
                     <h2>2007</h2>
-                    <a href="#home"><img src="./assets/projeto-110.png" alt="link projeto annexe"></a>
+                    <a href="#home"><img draggable="false" src="./assets/projeto-110.png" alt="link projeto annexe"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide12">
                     <h1>ASACCIONES</h1>
                     <h2>2011</h2>
-                    <a target="_blank" href="asacciones.html"><img src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
+                    <a target="_blank" href="asacciones.html"><img draggable="false" src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
                 <li class="card"><div class="textslide" id="textslide13">
                     <h1>RENOVA SP</h1>
                     <h2>2007</h2>
-                    <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
+                    <a target="_blank" href="renovasp.html"><img draggable="false" src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
                     <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                     <h4>CONCURSO</h4>
                 </div></li>
