--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Paloma Siqueira</title>
+    <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
     <meta http-equiv="content-language" content="pt-br, en-US" />
     <meta name="copyright" content="Copyright © 2021 Paloma Siqueira" />
