--- a/renovasp.html
+++ b/renovasp.html
@@ -8,6 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="renovasp.css">
     <title>RENOVA SP - Paloma Siqueira</title>
+    <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
+    <meta name="author" content="Flavia Sigoli"/>
+    <meta http-equiv="content-language" content="pt-br, en-US" />
+    <meta name="copyright" content="Copyright © 2021 Paloma Siqueira" />
+    <meta http-equiv="content-type" content="html; charset=UTF-8" />
+    <meta name="description" content="portifólio arquitetura por Paloma Siqueira" />
+    <meta name="keywords" content="portifolio, artigo, arquiteta, arquitetura, projetos, Paloma, Siqueira, Paloma Siqueira">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <header id="home">
